update marketing page with real live app

--- a/public/marketing.html
+++ b/public/marketing.html
@@ -5,19 +5,23 @@
     <link rel="stylesheet" href="/assets/application.css"></link>
   </head>
   <body>
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-6 col-md-6">
-          <h1>Pushbit!</h1>
-
-          <p>Colaboratively pushing up!</p>
-        </div>
-        <div class="col-sm-6 col-md-6">
-          <%= image_tag("iphone6.png") %>
-          <iframe src="/app/index.html" frameBorder="0" class="screens">
-          </iframe>
+    <section class="hero mobile-hero">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-6">
+            <h2 class="push-down-50">Built Mobile
+              First</h2>
+            <p>Experiment with the app right
+          </div>
+          <div class="col-sm-6">
+            <div id="phone">
+              <img src="/assets/iphone6.png" />
+              <iframe src="/app/index.html" frameBorder="0" class="screens">
+              </iframe>
+            </div>
+          </div>
         </div>
       </div>
-    </div>
+    </section>
   </body>
 </html>
