add a bit to marketing

--- a/public/marketing.html
+++ b/public/marketing.html
@@ -9,9 +9,8 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-6">
-            <h2 class="push-down-50">Built Mobile
-              First</h2>
-            <p>Experiment with the app right
+            <h1 class="push-down-50">Built Mobile First</h1>
+            <p>Do more pushups then your friends. :)</p>
           </div>
           <div class="col-sm-6">
             <div id="phone">
