work a tiny bit on copy

--- a/public/marketing.html
+++ b/public/marketing.html
@@ -9,8 +9,12 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-6">
-            <h1 class="push-down-50">Built Mobile First</h1>
-            <p>Do more pushups then your friends. :)</p>
+            <h1 class="push-down-50">Pushbit <small> for iPhone and iPod
+                touch</small></h1>
+            <p>Challenge your friends. Track who's doing the most
+            pushups each week.</p>
+
+            <a href="#"><img src="/assets/app_store_badge.svg" /></a>
           </div>
           <div class="col-sm-6">
             <div id="phone">
